--- a/src/Pages/Home/CategoryBanner/CategoryBanner.css
+++ b/src/Pages/Home/CategoryBanner/CategoryBanner.css
@@ -1,7 +1,4 @@
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
+
   
   .swiper-slide {
     text-align: center;
@@ -12,11 +9,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
   }
   
   .swiper-slide img {
-    display: block;
-    width: 100%;
+   
+    width: 900%;
     height: 500px;
-    object-fit: cover;
+   
   }
+
+ 
