--- a/src/Pages/Home/BrowseByCategory/BrowswCategoryz.css
+++ b/src/Pages/Home/BrowseByCategory/BrowswCategoryz.css
@@ -1,3 +1,21 @@
 .categoryWidth{
     width: 430px;
 }
+.button{
+    position: absolute;
+    top:70px ;
+    right: 166px; ;
+   
+}
+
+@media (max-width: 600px) {
+    .categoryWidth{
+        width: 330px;
+        margin-left: 20px;
+    }
+    .button{
+        position: absolute;
+        top:70px ;
+        right: 90px; ;
+    }
+  }
